Fix scrollbar issue with calculating number of characters

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -388,7 +388,19 @@
 .terminal a:hover {
     color: red;
 }
-.terminal {
+.terminal .terminal-fill {
+    position: absolute;
+    left: 0;
+    top: -100%;
+    width: 100%;
+    height: 100%;
+    margin: 1px 0 0;
+    border: none;
+    opacity: 0;
+    pointer-events: none;
+    box-sizing: border-box;
+}
+.terminal, .terminal .terminal-fill {
     padding: 10px;
 }
 @supports (--css: variables) {
