--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2017 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Thu, 27 Apr 2017 16:35:23 +0000
+ * Date: Thu, 27 Apr 2017 16:57:57 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -388,7 +388,19 @@
 .terminal a:hover {
     color: red;
 }
-.terminal {
+.terminal .terminal-fill {
+    position: absolute;
+    left: 0;
+    top: -100%;
+    width: 100%;
+    height: 100%;
+    margin: 1px 0 0;
+    border: none;
+    opacity: 0;
+    pointer-events: none;
+    box-sizing: border-box;
+}
+.terminal, .terminal .terminal-fill {
     padding: 10px;
 }
 @supports (--css: variables) {
